kubernetes/flask-app-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-v2
  labels:
    app: flask-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      version: v2
  template:
    metadata:
      labels:
        app: flask-app
        version: v2
    spec:
      containers:
        - name: flask-app
          image: vetri20/flask-app:latest
          ports:
            - containerPort: 5000
