kubernetes/nagios-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagios-service
spec:
  selector:
    app: nagios
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
