kubernetes/linkerd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app
  namespace: default
spec:
  hosts:
    - "*"
  http:
    - match:
        - uri:
            exact: "/"
      route:
        - destination:
            host: flask-app-service
            port:
              number: 80
